# django-rusty-templates

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml  justfile  llvm-cov-env.sh  pyproject.toml
.github/: zizmor.yml
.github/workflows/: build.yml  clippy.yml  codspeed.yml  lint.yml  pr-comment-django-test-suite.yml  python.yml  rust.yml
benches/: slugify_bench.rs
dtl-benchmark/: Cargo.toml  README.md
dtl-benchmark/benches/: slugify.rs
dtl-lexer/: Cargo.toml
dtl-lexer/src/: autoescape.rs  common.rs  core.rs  custom_tag.rs  forloop.rs  ifcondition.rs  include.rs  lib.rs  load.rs  lorem.rs  tag.rs  types.rs  variable.rs
dtl-lexer/src/tag/: autoescape.rs  block.rs  (+12 more)
lexer/: Cargo.toml
lexer/src/: lex.rs
proptest-regressions/: loaders.txt
scripts/: django_tests_use_rusty_templates.patch  run_django_test_suite.py
src/: error.rs  filters.rs  lib.rs  loaders.rs  parse.rs  path.rs  render.rs  template.rs  types.rs  utils.rs
src/lex/: common.rs
src/render/: comment.rs  common.rs  filters.rs  lorem.rs  tags.rs  types.rs
tests/: conftest.py  outside.txt  settings.py  test_autoescape.py  test_context_processors.py  test_engine.py  test_filters_first.py  test_loaders.py  test_render.py  test_variable.py  utils.py
tests/benchmarks/: test_include.py
tests/extra_templates/: extends_self.txt
tests/filters/: test_add.py  test_capfirst.py  test_center.py  test_cut.py  test_date.py  test_default.py  test_default_if_none.py  test_divisibleby.py  test_escape.py  test_escapejs.py  test_external.py  test_first.py  test_force_escape.py  test_last.py  test_length.py  test_safe.py  test_title.py  test_upper.py  test_wordcount.py  test_wordwrap.py  test_yesno.py
tests/tags/: test_autoescape.py  test_comment.py  test_csrf_token.py  test_custom_simple.py  test_custom_simple_block.py  test_extends.py  test_for.py  test_if.py  test_include.py  test_load.py  test_lorem.py  test_now.py  test_templatetag.py  test_url.py
tests/templates/: base.txt  extends_after_tag.txt  extends_extends_variable.txt  extends_invalid.txt  extends_self.txt  looped.txt  nested_blocks.txt  nested_parent.txt  recursion.txt
(+18 files in other folders)
